# ascii_checkers

./: CMakeLists.txt  README.md  boardgame.h  checkerboard.cpp  checkerboard.h  checkers  checkers.cpp  checkers.h  computerplayer.cpp  computerplayer.h  humanplayer.cpp  humanplayer.h  main.cpp  make.sh  menu.cpp  menu.h  moveObj.cpp  moveObj.h  piece.cpp  piece.h  player.cpp  player.h
